2010-01-11 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: fixed #527

2010-01-03  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_loopback.c: make sure we create an new UUID for the MO we
      are about to loopback via this smsc. This is more realistic by means that
      other smsc modules also create an own UUID for a logical MO.
    
2009-12-23 Alexander Malysh <amalysh at kannel.org>
    * gwlib/log.c, gw/wap_push_ppg.c: fixed some compiler warnings and typos.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2009-12-22 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: fixed crash in octstr_decode_url() when called with octstr=NULL.
      Bug #528.
      Thanks to Stepan Seycek <s.seycek at dimoco.at> for this patch.

2009-12-07  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_emi.c: fix segmentation fault in case we jump via goto 
      error in smsc_emi2_create(), but have yet no privdata created.

2009-12-06 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/bearerbox.c, gw/smsbox.c, gw/wapbox.c, gwlib/cfg.def:
      Applied patch that adds configurable http-timeout support for outgoing http client connections.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2009-12-03 Alexander Malysh <amalysh at kannel.org>
    * gw/meta_data.c: fixed memory leak.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for hint.

2009-11-24 Alejandro Guerrieri <aguerrieri at kannel.org>
    * contrib/kannel-monitor/*: rewrite of the code to support separate dlr
      counters. Interface cleanup and php code updates.

2009-11-23 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_pgsql.c: applied patch that escapes table name and fields.
      Quoting an identifier also makes it case-sensitive, whereas unquoted names are
      always folded to lower case. CB.
      See http://www.postgresql.org/docs/8.0/static/sql-syntax.html#SQL-SYNTAX-IDENTIFIERS